--- a/TalismanSqlForum/Views/Shared/_Layout.cshtml
+++ b/TalismanSqlForum/Views/Shared/_Layout.cshtml
@@ -67,14 +67,14 @@
     </div>
     <div class="row">
         <footer>
-            <nav class="navigation-bar bg-white fixed-bottom">
-                <div class="navigation-bar-content container">
+            <nav class="navigation-bar bg-white fixed-bottom" style="border-top: 3px darkgray ridge;">
+                <div class=" navigation-bar-content container">
                     <img style="width: 35px; height: 35px; float: left;" src="~/Content/l_.png">
                     <span class="element-divider"></span>
                     <a class="element bg-transparent fg-dark image-button image-left" href="http://talisman-sql.ru/#i201">
                         ООО "Центр автоматизации" 2014
                     </a><span class="element-divider"></span>
-                    <a class="element place-right bg-transparent fg-dark image-button image-left" href="/Information/Rules">
+                    <a class="element place-right bg-transparent fg-dark image-button image-left" href="@Url.Action("Rules","Information")">
                         Правила форума
                     </a>
                 </div>
