--- a/TalismanSqlForum/Views/Account/Register.cshtml
+++ b/TalismanSqlForum/Views/Account/Register.cshtml
@@ -15,8 +15,8 @@
                     @Html.ValidationSummary("", new { @class = "text-danger" })
                     <fieldset>
                         <legend></legend>
-                        <label>
-                            <font class="fg-red">*</font> - Поля, обязательные для заполнения
+                        <label class="margin10">
+                            <font class="fg-red">*</font> - <i class="fg-grayLight">Поля, обязательные для заполнения</i>
                         </label>                                                  
                         @Html.LabelFor(m => m.Email, new {@class = "label_req" })
                         <div class="input-control text">
