--- a/TalismanSqlForum/Views/ForumMessages/Index.cshtml
+++ b/TalismanSqlForum/Views/ForumMessages/Index.cshtml
@@ -169,4 +169,9 @@
             }
         </div>
     </div>
+    <script type="text/javascript">
+        CKEDITOR.replace('tForumMessages_messages', {
+            filebrowserImageUploadUrl: '@Url.Action("UploadImage","Upload")'
+        });
+    </script>
 }
