--- a/TalismanSqlForum/Views/Search/Index.cshtml
+++ b/TalismanSqlForum/Views/Search/Index.cshtml
@@ -1,27 +1,37 @@
 ﻿@{
     ViewBag.Title = "Результат поиска";
 }
-<div class="panel" data-role="panel">
-    <div class="panel-header">
-        Поиск в названиях тем
+<div class="panel">
+    <div class="panel-header gradient_header">
+        <h4 class="fg-white">
+            <i class="icon-search"></i>
+            Вы искали - "@ViewData["val"]"
+        </h4>
     </div>
     <div class="panel-content bg-white">
-        @Html.Partial("tForumThemes", ViewData["tForumThemes"])
-    </div>
-</div>
-<div class="panel" data-role="panel">
-    <div class="panel-header">
-        Поиск в описании тем
-    </div>
-    <div class="panel-content bg-white">
-        @Html.Partial("tForumThemes_desc", ViewData["tForumThemes_desc"])
-    </div>
-</div>
-<div class="panel" data-role="panel">
-    <div class="panel-header">
-        Поиск в сообщениях
-    </div>
-    <div class="panel-content bg-white">
-        @Html.Partial("tForumMessages", ViewData["tForumMessages"])
+        <div class="panel" data-role="panel">
+            <div class=" panel-header no-border">
+                Поиск в названиях тем
+            </div>
+            <div class="panel-content bg-white no-border">
+                @Html.Partial("tForumThemes", ViewData["tForumThemes"])
+            </div>
+        </div>
+        <div class="panel" data-role="panel">
+            <div class="panel-header no-border">
+                Поиск в описании тем
+            </div>
+            <div class="panel-content bg-white no-border">
+                @Html.Partial("tForumThemes_desc", ViewData["tForumThemes_desc"])
+            </div>
+        </div>
+        <div class="panel" data-role="panel">
+            <div class="panel-header no-border">
+                Поиск в сообщениях
+            </div>
+            <div class="panel-content bg-white no-border">
+                @Html.Partial("tForumMessages", ViewData["tForumMessages"])
+            </div>
+        </div>
     </div>
 </div>
