--- a/TalismanSqlForum/Views/Search/tForumThemes_desc.cshtml
+++ b/TalismanSqlForum/Views/Search/tForumThemes_desc.cshtml
@@ -2,7 +2,7 @@
 <div class="listview-outlook">
     @foreach (var item in Model)
     {
-        <a class="list-group-item" href="@Url.Action("Index", "ForumMessages", new {id = item.Id, id_fl = item.tForumList.Id })">
+        <a class="list" href="@Url.Action("Index", "ForumMessages", new {id = item.Id, id_fl = item.tForumList.Id })">
             <div class="list-content">
                 <h4 class="list-group-item-heading">
                     @item.tForumThemes_name
