Мобильные устройства. Меняем тип поля Описание на строку

--- a/TalismanSqlForum/Views/Shared/_Layout.cshtml
+++ b/TalismanSqlForum/Views/Shared/_Layout.cshtml
@@ -72,7 +72,7 @@
                     <img style="width: 35px; height: 35px; float: left;" src="~/Content/l_.png">
                     <span class="element-divider"></span>
                     <a class="element bg-transparent fg-dark image-button image-left" href="http://talisman-sql.ru/#i201">
-                        ООО "Центр автоматизации" 2014
+                        ООО "Талисман" 2014
                     </a><span class="element-divider"></span>
                     <a class="element place-right bg-transparent fg-dark image-button image-left" href="@Url.Action("Rules","Information")">
                         Правила форума
