--- a/TalismanSqlForum/Views/ForumList/Index.cshtml
+++ b/TalismanSqlForum/Views/ForumList/Index.cshtml
@@ -25,11 +25,11 @@
                                     }
                                     if (User.Identity.IsAuthenticated && t > 0)
                                     {
-                                        <i class="icon-mail fg-orange"></i>
+                                        <i class="@item.tForumList_icon fg-orange"></i>
                                     }
                                     else
                                     {
-                                        <i class="icon-mail fg-gray"></i>
+                                        <i class="@item.tForumList_icon fg-gray"></i>
                                     }
 }
                             </div>
