--- a/TalismanSqlForum/Views/ForumThemes/Index.cshtml
+++ b/TalismanSqlForum/Views/ForumThemes/Index.cshtml
@@ -19,7 +19,7 @@
     <div class="panel">
         <div class="panel-header gradient_header fg-white">
             <h4 class="fg-white">
-                <i class="icon-grid-view"></i>
+                <i class="@ViewData["tforumlist_icon"]"></i>
                 @ViewBag.Title
             </h4>
         </div>
