Уменьшены элементы меню

--- a/TalismanSqlForum/Views/Shared/_Layout.cshtml
+++ b/TalismanSqlForum/Views/Shared/_Layout.cshtml
@@ -69,13 +69,11 @@
         <footer>
             <nav class="navigation-bar bg-white fixed-bottom" style="border-top: 3px darkgray ridge;">
                 <div class=" navigation-bar-content container">
-                    <img style="width: 25px; height: 25px; float: left;" src="~/Content/l_.png">
-                    <span class="element-divider"></span>
                     <a class="element bg-transparent fg-dark image-button image-left" href="http://talisman-sql.ru/#i201">
-                        ООО "Талисман" 2014
-                    </a><span class="element-divider"></span>
+                        <em>ООО "Талисман" 2014</em>
+                    </a>
                     <a class="element place-right bg-transparent fg-dark image-button image-left" href="@Url.Action("Rules","Information")">
-                        Правила форума
+                        <em>Правила форума</em>
                     </a>
                 </div>
             </nav>
