--- a/TalismanSqlForum/Views/Shared/_LoginPartial.cshtml
+++ b/TalismanSqlForum/Views/Shared/_LoginPartial.cshtml
@@ -4,34 +4,40 @@
     using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
     {
         @Html.AntiForgeryToken()
-    <a href="javascript:document.getElementById('logoutForm').submit()" class="element bg-transparent place-right">
-        <i class="icon-exit"></i>
-        Выйти
-    </a>
-    <span class="element-divider place-right"></span>
-    <a href="@Url.Action("Manage","Account")" class="element bg-transparent place-right">
-        <i class="icon-pencil"></i>
-        Профиль(@User.Identity.GetUserName())
-    </a>
-        if (User.IsInRole("admin"))
-        {
-            <span class="element-divider place-right"></span>
-    <a href="@Url.Action("Index","Admin")" class="element bg-transparent place-right">
-        <i class="icon-wrench"></i>
-    </a>
-        }
+        <li style="border-bottom : 1px transparent solid;">
+            <a href="javascript:document.getElementById('logoutForm').submit()" class="gradient_header" style="border-radius: 7px;margin-bottom: 3px;">
+                <i class="icon-exit"></i>
+                Выйти
+            </a>
+        </li>
+        <li style="border-bottom : 1px transparent solid;">
+            <a href="@Url.Action("Manage","Account")" class="gradient_header" style="border-radius: 7px;margin-bottom: 3px;">
+                <i class="icon-pencil"></i>
+                Профиль(@User.Identity.GetUserName())
+            </a>
+        </li>
+    }
+    if (User.IsInRole("admin"))
+    {
+        <li style="border-bottom : 1px transparent solid;">
+            <a href="@Url.Action("Index","Admin")" class="gradient_header" style="border-radius: 7px;margin-bottom: 3px;">
+                <i class="icon-wrench"></i>
+            </a>
+        </li>
     }
 }
 else
 {
-
-    <a href="@Url.Action("Register","Account")" id="registerLink" class="element bg-transparent place-right">
-        <i class="icon-accessibility"></i>
-        Регистрация
-    </a>
-    <span class="element-divider gradient_header place-right"></span>
-    <a href="@Url.Action("Login", "Account", new { returnurl = ViewBag.ReturnUrl })" id="loginLink" class="element bg-transparent place-right">
-        <i class="icon-enter"></i>
-        Вход
-    </a>
+    <li style="border-bottom : 1px transparent solid;">
+        <a href="@Url.Action("Register","Account")" id="registerLink" class="gradient_header" style="border-radius: 7px;margin-bottom: 3px;">
+            <i class="icon-accessibility"></i>
+            Регистрация
+        </a>
+    </li>
+    <li style="border-bottom : 1px transparent solid;">
+        <a href="@Url.Action("Login", "Account", new { returnurl = ViewBag.ReturnUrl })" id="loginLink" class="gradient_header" style="border-radius: 7px;margin-bottom: 3px;">
+            <i class="icon-enter"></i>
+            Вход
+        </a>
+    </li>
 }
